<resources>
    <string name="app_name">D-Health</string>

    <string name="facebook_app_id">857957511817240</string>
    <string name="fb_login_protocol_scheme">fb857957511817240</string>

    <string name="login_message">¿Ya tienes \nuna cuenta?</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="login_methods">Usa Otros Métodos</string>
    <string name="login_password_res">¿Olvidaste tu contraseña?</string>
    <string name="login_button_sign">¿Eres nuevo? Registrate Ahora</string>

    <string name="signup_message">Este es tu \nprimer paso \ncon nosotros</string>
    <string name="signup_name_hint">Nombre Completo</string>
    <string name="signup_rpassword_hint">Repetir Contraseña</string>
    <string name="signup_button">Registrarse</string>
    <string name="signup_button_log">¿Ya tienes una cuenta?</string>

    <string name="signup_m_fields">Debe completar los campos</string>
    <string name="signup_m_pass">Las contraseñas no coinciden</string>
    <string name="signup_m_pass2">La contraseña debe tener al menos 6 caracteres</string>

    <string name="signdata_message">Necesitamos \nalgunos \ndatos antes \nde empezar</string>
    <string name="signdata_link">Volver</string>
    <string name="signdata_gender">Sexo</string>
    <string name="signdata_age">Edad</string>
    <string name="signdata_height">Talla</string>
    <string name="signdata_weight">Peso</string>
    <string name="signdata_button">Continuar</string>

    <string name="error_age">Ingrese una edad válida</string>
    <string name="error_weight">Ingrese un peso válido</string>
    <string name="error_height">Ingrese una altura válida</string>

    <string name="error_login"> Error al iniciar sesión</string>
    <string name="firebase_error">No se pudo iniciar sesión</string>
    <string name="incorrect_login">No se pudo iniciar sesión, compruebe los datos</string>
    <string name="fields_login">Debe completar los campos</string>

    <string name="signup_incorrect">No se pudieron crear los datos correctamente</string>
    <string name="signup_error">Usuario no registrado</string>

    <string name="pedo_message">No se encontró el sensor"</string>
    <string name="pedo_tab1">Podometro</string>
    <string name="pedo_tab2">Rutinas</string>

    <string name="glucose_error">No se registró la glucosa"</string>
    <string name="glucose_message">Glucosa registrada</string>
    <string name="text_reg_glucose">Registrar Glucosa</string>
    <string name="glucose_button">Confirmar</string>

    <string name="editp_profile">Perfil</string>
    <string name="editp_save">Guardar</string>
    <string name="editp_age_hint">Edad</string>
    <string name="editp_sex_hint">Sexo</string>
    <string name="editp_height_hint">Talla</string>
    <string name="editp_weight_hint">Peso</string>

    <string name="heading_1">Control de tu glucosa</string>
    <string name="heading_2">Ejercitate según tu nivel</string>
    <string name="heading_3">Recuerda que medicamentos tomar</string>
    <string name="heading_4">Observa tu progreso</string>

    <string name="desc_1">Registra tu glucosa en mg/dL o mml/L</string>
    <string name="desc_2">Lleva un control de tus pasos y ejercitate con nuestras rutinas</string>
    <string name="desc_3">Programa recordatorios para tu medicación</string>
    <string name="desc_4">Estadísticas de tu progreso por día, semana, mes y año</string>

    <string name="pose1">Tip: hacer curl de bíceps, extensiones de tríceps en polea alta, ayudan a hacer más y mejores flexiones.</string>

</resources>
