<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.EditProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="279dp"
            android:background="@drawable/ep_bakground">

            <RelativeLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="26dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="30dp"
                    app:srcCompat="@drawable/ic_arrow"/>

                <TextView
                    android:id="@+id/textProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/editp_profile"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/eptextSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/editp_save"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="17sp"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_run"
                app:civ_border_color="#FFF"
                app:civ_border_width="5dp">

            </de.hdodenhof.circleimageview.CircleImageView>

        </RelativeLayout>

        <LinearLayout
            android:background="@drawable/dep_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:elevation="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ptextInputName"
                    style="@style/parent"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/peditTextName"
                        style="@style/modifiedEditText"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:hint="@string/signup_name_hint" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ptextInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/peditTextEmail"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ptextInputPass"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/peditTextPass"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ptextInputNpass"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/peditTextNpass"
                        style="@style/modifiedEditText"
                        android:hint="@string/signup_rpassword_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ptextInputSex"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/peditTextSex"
                            style="@style/modifiedEditText"
                            android:hint="@string/editp_age_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ptextInputAge"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin" >

                        <EditText
                            android:id="@+id/peditTextAge"
                            style="@style/modifiedEditText"
                            android:hint="@string/editp_sex_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ptextInputHeight"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/peditTextHeight"
                            style="@style/modifiedEditText"
                            android:hint="@string/editp_height_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ptextInputWeight"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin" >

                        <EditText
                            android:id="@+id/peditTextWeight"
                            style="@style/modifiedEditText"
                            android:hint="@string/editp_weight_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>