<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_background"
    tools:context=".SignData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/signdata_message"
                    android:textColor="@color/whiteTextColor" />

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="144dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_login_hero" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@drawable/dep_background">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/reditTextAge"
                            style="@style/modifiedEditText"
                            android:hint="@string/signdata_age"
                            android:inputType="number"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputGender"
                        style="@style/parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="5dp"
                            android:text="Sexo"
                            android:textColor="#9F9F9F"
                            android:textSize="12sp">

                        </TextView>

                        <Spinner
                            android:id="@+id/spinnerGender"
                            style="@style/modifiedEditText"
                            android:entries="@array/gender" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputHeight"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/reditTextHeight"
                            style="@style/modifiedEditText"
                            android:hint="@string/signdata_height"
                            android:inputType="number"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputWeight"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/reditTextWeight"
                            style="@style/modifiedEditText"
                            android:hint="@string/signdata_weight"
                            android:inputType="numberDecimal"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/continueButton"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/signdata_button"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp"/>

                <TextView
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="10dp"
                    android:onClick="onLoginClick"
                    android:text="@string/signdata_link"
                    android:textAlignment="center"
                    android:textColor="@color/themeColor"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>